front-end/front-ent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: steveaurel_front_end:latest
          ports:
            - containerPort: 4200
          readinessProbe:
            httpGet:
              path: /
              port: 4200
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4200
            initialDelaySeconds: 10
            periodSeconds: 30
