front-end/front-ent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: LoadBalancer
